--- a/strand/iOS/Strand/Strand/DFGallerySectionHeader.xib
+++ b/strand/iOS/Strand/Strand/DFGallerySectionHeader.xib
@@ -32,7 +32,7 @@
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="6R4-fp-YjS" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="69U-JX-ues"/>
                 <constraint firstAttribute="bottom" secondItem="9fM-G5-zyZ" secondAttribute="bottom" constant="10" id="LA3-wb-VuG"/>
