--- a/strand/iOS/Strand/Strand/DFCreateStrandViewController.xib
+++ b/strand/iOS/Strand/Strand/DFCreateStrandViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFCreateStrandViewController">
             <connections>
+                <outlet property="flowLayout" destination="Xqd-LW-Vn4" id="6ya-eh-fr4"/>
                 <outlet property="view" destination="QSZ-XG-Db4" id="BwZ-gP-zDJ"/>
             </connections>
         </placeholder>
@@ -15,7 +16,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Xqd-LW-Vn4">
-                <size key="itemSize" width="50" height="50"/>
+                <size key="itemSize" width="100" height="100"/>
                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
