--- a/strand/iOS/Strand/Strand/DFCreateStrandViewController.xib
+++ b/strand/iOS/Strand/Strand/DFCreateStrandViewController.xib
@@ -6,27 +6,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFCreateStrandViewController">
             <connections>
-                <outlet property="flowLayout" destination="Xqd-LW-Vn4" id="6ya-eh-fr4"/>
-                <outlet property="view" destination="QSZ-XG-Db4" id="BwZ-gP-zDJ"/>
+                <outlet property="view" destination="KYO-2q-Y2p" id="WEK-zH-pPM"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" id="QSZ-XG-Db4">
+        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="167" sectionHeaderHeight="22" sectionFooterHeight="22" id="KYO-2q-Y2p">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Xqd-LW-Vn4">
-                <size key="itemSize" width="100" height="100"/>
-                <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-            </collectionViewFlowLayout>
-            <cells/>
             <connections>
-                <outlet property="dataSource" destination="-1" id="297-4K-AFn"/>
-                <outlet property="delegate" destination="-1" id="fgN-dz-efW"/>
+                <outlet property="dataSource" destination="-1" id="Tci-FG-SLF"/>
+                <outlet property="delegate" destination="-1" id="FK1-w9-LHY"/>
             </connections>
-        </collectionView>
+        </tableView>
     </objects>
 </document>
