--- a/strand/iOS/Strand/Strand/DFLockedStrandCell.xib
+++ b/strand/iOS/Strand/Strand/DFLockedStrandCell.xib
@@ -25,6 +25,10 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells/>
+                        <connections>
+                            <outlet property="dataSource" destination="-1" id="Yhh-bI-gnx"/>
+                            <outlet property="delegate" destination="-1" id="SHH-Cr-u1b"/>
+                        </connections>
                     </collectionView>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="These photos are locked. Take a photo in Strand to see them." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="282" translatesAutoresizingMaskIntoConstraints="NO" id="rLc-tW-oOk">
                         <rect key="frame" x="20" y="10" width="282" height="36"/>
