Separate out suggestions and invited photos

--- a/strand/iOS/Strand/Strand/DFCreateStrandTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFCreateStrandTableViewCell.xib
@@ -13,7 +13,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="168"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pPp-Tv-ABx">
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pPp-Tv-ABx">
                         <rect key="frame" x="0.0" y="10" width="320" height="148"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
