--- a/strand/iOS/Strand/Strand/DFSelectPhotosViewController.xib
+++ b/strand/iOS/Strand/Strand/DFSelectPhotosViewController.xib
@@ -8,6 +8,7 @@
             <connections>
                 <outlet property="collectionView" destination="Km3-sv-lcM" id="4bR-q1-qkK"/>
                 <outlet property="flowLayout" destination="naL-ru-Sc5" id="3Zm-63-zTJ"/>
+                <outlet property="searchBarWrapperView" destination="bEr-Bw-A3D" id="rOi-U9-Qz4"/>
                 <outlet property="tableView" destination="U6o-km-SAy" id="K12-Kc-AEJ"/>
                 <outlet property="view" destination="XUO-Rl-pFv" id="BQ7-KV-dfn"/>
             </connections>
@@ -17,7 +18,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Km3-sv-lcM">
+                <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Km3-sv-lcM">
                     <rect key="frame" x="0.0" y="44" width="320" height="524"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -35,14 +36,36 @@
                         <outlet property="delegate" destination="-1" id="4gh-u4-v64"/>
                     </connections>
                 </collectionView>
-                <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="U6o-km-SAy">
+                <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="U6o-km-SAy">
                     <rect key="frame" x="0.0" y="44" width="320" height="524"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bEr-Bw-A3D" userLabel="searchBarWrapper">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="ZXZ-U3-IAj"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <gestureRecognizers/>
+            <constraints>
+                <constraint firstItem="U6o-km-SAy" firstAttribute="top" secondItem="bEr-Bw-A3D" secondAttribute="bottom" id="3No-zD-1wR"/>
+                <constraint firstAttribute="trailing" secondItem="U6o-km-SAy" secondAttribute="trailing" id="DLm-Ie-osq"/>
+                <constraint firstItem="Km3-sv-lcM" firstAttribute="leading" secondItem="XUO-Rl-pFv" secondAttribute="leading" id="J8Y-8Z-HwF"/>
+                <constraint firstItem="Km3-sv-lcM" firstAttribute="top" secondItem="XUO-Rl-pFv" secondAttribute="top" priority="900" id="QeW-JZ-Seq"/>
+                <constraint firstItem="U6o-km-SAy" firstAttribute="leading" secondItem="XUO-Rl-pFv" secondAttribute="leading" id="Sf6-f9-x7M"/>
+                <constraint firstAttribute="trailing" secondItem="Km3-sv-lcM" secondAttribute="trailing" id="W95-Hz-mci"/>
+                <constraint firstItem="bEr-Bw-A3D" firstAttribute="leading" secondItem="XUO-Rl-pFv" secondAttribute="leading" id="XBP-5H-KAP"/>
+                <constraint firstAttribute="bottom" secondItem="U6o-km-SAy" secondAttribute="bottom" id="j8t-Zy-Yi5"/>
+                <constraint firstItem="Km3-sv-lcM" firstAttribute="top" secondItem="bEr-Bw-A3D" secondAttribute="bottom" id="pcS-yA-bQm"/>
+                <constraint firstAttribute="bottom" secondItem="Km3-sv-lcM" secondAttribute="bottom" id="qOs-hu-zwc"/>
+                <constraint firstItem="bEr-Bw-A3D" firstAttribute="top" secondItem="XUO-Rl-pFv" secondAttribute="top" id="rG4-q8-z3x"/>
+                <constraint firstAttribute="trailing" secondItem="bEr-Bw-A3D" secondAttribute="trailing" id="xhH-ag-P1h"/>
+            </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
