Add profile photo stack to Gallery view

--- a/strand/iOS/Strand/Strand/DFGallerySectionHeader.xib
+++ b/strand/iOS/Strand/Strand/DFGallerySectionHeader.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -10,49 +11,77 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6R4-fp-YjS">
-                    <rect key="frame" x="10" y="7" width="300" height="20"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnI-gc-qko">
-                    <rect key="frame" x="27" y="27" width="283" height="20"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
-                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/LocationHeaderIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="9fM-G5-zyZ">
-                    <rect key="frame" x="10" y="29" width="15" height="15"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PJQ-PA-sUn" userLabel="Content">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
+                    <subviews>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6R4-fp-YjS">
+                            <rect key="frame" x="51" y="10" width="261" height="20"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnI-gc-qko">
+                            <rect key="frame" x="68" y="30" width="244" height="16"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/LocationHeaderIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="9fM-G5-zyZ">
+                            <rect key="frame" x="51" y="30" width="15" height="15"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="15" id="prN-l8-dIN"/>
+                                <constraint firstAttribute="height" constant="15" id="yFg-Pk-gHV"/>
+                            </constraints>
+                        </imageView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VvB-T1-SD0" customClass="DFProfilePhotoStackView" customModule="Strand" customModuleProvider="target">
+                            <rect key="frame" x="8" y="10" width="35" height="35"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="70" id="052-M7-ENS"/>
+                                <constraint firstAttribute="height" priority="900" constant="35" id="Fd5-O8-AMA"/>
+                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="35" id="HhC-OM-kJ7"/>
+                                <constraint firstAttribute="width" constant="35" id="tPF-XX-bke"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="15" id="prN-l8-dIN"/>
+                        <constraint firstAttribute="trailing" secondItem="YnI-gc-qko" secondAttribute="trailing" constant="8" id="BTt-wT-72m"/>
+                        <constraint firstItem="6R4-fp-YjS" firstAttribute="leading" secondItem="VvB-T1-SD0" secondAttribute="trailing" constant="8" id="Nsj-v7-1RK"/>
+                        <constraint firstItem="9fM-G5-zyZ" firstAttribute="leading" secondItem="VvB-T1-SD0" secondAttribute="trailing" constant="8" id="Q5p-6P-b1o"/>
+                        <constraint firstAttribute="centerY" secondItem="VvB-T1-SD0" secondAttribute="centerY" id="S5P-8g-Z4w"/>
+                        <constraint firstItem="VvB-T1-SD0" firstAttribute="leading" secondItem="PJQ-PA-sUn" secondAttribute="leading" constant="8" id="WOe-bd-Xu6"/>
+                        <constraint firstItem="9fM-G5-zyZ" firstAttribute="top" secondItem="6R4-fp-YjS" secondAttribute="bottom" id="gc1-4R-lGW"/>
+                        <constraint firstItem="YnI-gc-qko" firstAttribute="top" secondItem="6R4-fp-YjS" secondAttribute="bottom" id="hZe-72-9Tw"/>
+                        <constraint firstItem="YnI-gc-qko" firstAttribute="leading" secondItem="9fM-G5-zyZ" secondAttribute="trailing" constant="2" id="iUx-K3-hZN"/>
+                        <constraint firstAttribute="trailing" secondItem="6R4-fp-YjS" secondAttribute="trailing" constant="8" id="jBz-NM-2Pe"/>
+                        <constraint firstItem="6R4-fp-YjS" firstAttribute="top" secondItem="VvB-T1-SD0" secondAttribute="top" id="wPK-3r-pvc"/>
                     </constraints>
-                </imageView>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="6R4-fp-YjS" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="69U-JX-ues"/>
-                <constraint firstAttribute="bottom" secondItem="9fM-G5-zyZ" secondAttribute="bottom" constant="10" id="LA3-wb-VuG"/>
-                <constraint firstAttribute="bottom" secondItem="YnI-gc-qko" secondAttribute="bottom" constant="7" id="M71-Af-aOU"/>
-                <constraint firstItem="9fM-G5-zyZ" firstAttribute="top" secondItem="6R4-fp-YjS" secondAttribute="bottom" constant="2" id="S59-bT-3Vz"/>
-                <constraint firstItem="6R4-fp-YjS" firstAttribute="trailing" secondItem="YnI-gc-qko" secondAttribute="trailing" id="Sst-47-IZ1"/>
-                <constraint firstItem="YnI-gc-qko" firstAttribute="top" secondItem="6R4-fp-YjS" secondAttribute="bottom" id="lbS-AE-9sj"/>
-                <constraint firstItem="9fM-G5-zyZ" firstAttribute="leading" secondItem="6R4-fp-YjS" secondAttribute="leading" id="njG-KX-cfB"/>
-                <constraint firstItem="6R4-fp-YjS" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="oj7-jo-kcQ"/>
-                <constraint firstItem="YnI-gc-qko" firstAttribute="leading" secondItem="9fM-G5-zyZ" secondAttribute="trailing" constant="2" id="xdn-vX-ZeK"/>
-                <constraint firstItem="6R4-fp-YjS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="7" id="yMJ-Rp-8Qa"/>
+                <constraint firstAttribute="bottom" secondItem="PJQ-PA-sUn" secondAttribute="bottom" id="Hvk-1g-MJc"/>
+                <constraint firstAttribute="trailing" secondItem="PJQ-PA-sUn" secondAttribute="trailing" id="Ve6-VK-ONh"/>
+                <constraint firstItem="PJQ-PA-sUn" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="t4N-eF-aml"/>
+                <constraint firstItem="PJQ-PA-sUn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="w5T-cw-BRd"/>
             </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="profilePhotoStackView" destination="VvB-T1-SD0" id="HF8-bC-SZr"/>
                 <outlet property="subtitleLabel" destination="YnI-gc-qko" id="XdG-xP-I0c"/>
                 <outlet property="titleLabel" destination="6R4-fp-YjS" id="qed-Tz-tp8"/>
             </connections>
+            <point key="canvasLocation" x="0.0" y="2"/>
         </view>
     </objects>
     <resources>
         <image name="Assets/Icons/LocationHeaderIcon.png" width="16" height="16"/>
     </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
